# Tranlation-and-compilation-methods

./: .gitignore  CMakeLists.txt  lexAnal_test.txt  preprocessed_test.c  semAnal_symbTable_test.txt  semAnal_triads_test.txt  syntaxAnal_test.json
Lab 1/: CMakeLists.txt  preprocessed_test.c  preprocessor.cpp  test.c
Lab 2/: CMakeLists.txt  lexicalAnalyzer.cpp  preprocessed_test.c_tokens.txt
Lab 3/: CMakeLists.txt  preprocessed_test.c_tokens.txt  preprocessed_test.json  syntaxAnalyzer.cpp
Lab 4/: CMakeLists.txt  semanticAnalyzer.cpp
